<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CINEPRIME - ONLINE MOVIES , WEBSERIES &amp; SHORTFILMS</string>
    <string name="menu_home">CINEPRIME - ONLINE MOVIES, WEBSERIES &amp; SHORTFILMS</string>
    <string name="menu_tv_show">TV Shows</string>
    <string name="menu_movie">Movies</string>
    <string name="menu_sport">Sports</string>
    <string name="menu_Premium">Premium</string>
    <string name="menu_tv">Live TV</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Settings</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_dashboard">Membership</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_watchlist">WatchList</string>
    <string name="menu_web_series">Web series</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="name_login">Enter Your Name</string>
    <string name="email_login">Enter Email</string>
    <string name="mobile_login">Enter Mobile No</string>
    <string name="password_login">Enter Password</string>
    <string name="phone_login">Phone</string>
    <string name="confirm_password">Enter Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="age_verify">Your age must be 18 or above</string>
    <string name="login">Login</string>
    <string name="logout_all_device">Log Out All Devices</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">Don\'t Have an Account? </string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="forgot_description">Enter your Registered Mobile No below and  we\'ll send you password</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="please_enter_email">Enter your email</string>
    <string name="please_enter_mobile">Enter your Mobile Number</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">2.1.5 (1020)</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name"></string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text"></string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text"></string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text"></string>
    <string name="about_us_about">About</string>
    <string name="enable_push">Enable Push Notification</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About Us</string>
    <string name="name">Name :-</string>
    <string name="email">Email :-</string>
    <string name="phone">Phone :-</string>
    <string name="password">Password :-</string>
    <string name="address">Address :-</string>
    <string name="profile_name_hint">Enter Name</string>
    <string name="profile_email_hint">Enter Email</string>
    <string name="profile_password_hint">Enter Password</string>
    <string name="profile_phone_hint">Enter Phone</string>
    <string name="profile_address_hint">Enter Address</string>
    <string name="save">Save</string>
    <string name="subscription_plan">Subscription</string>
    <string name="subscription_msg">By Selecting Subscription Plans, you will be able to watch premium Movies and Series based on the duration of your plan.</string>
    <string name="select_subscription_plan">Select Your Subscription Plan</string>
    <string name="subscription_proceed">CONTINUE</string>
    <string name="user_info">Plan Information</string>
    <string name="choose_plan">You have Selected a</string>
    <string name="choose_plan_1">for your registered Mob No </string>
    <string name="choose_plan_2">Click on Change Plan Button if you wish to change the Plan</string>
    <string name="choose_plan_3">""</string>
    <string name="choose_plan_4">""</string>
    <string name="choose_plan_5">""</string>
    <string name="change_plan">Change Plan</string>
    <string name="payment_option">Payment Option</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">Stripe</string>
    <string name="razor_pay">RazorPay</string>
    <string name="plan_day_for">For %s</string>
    <string name="no_payment_gateway">There is currently not any payment gateway is available so Please choose Free Plan. </string>
    <string name="select_gateway">Please select any one of them payment options</string>
    <string name="paypal_display_website">http://videostreaming.viavilab.com/</string>
    <string name="razor_pay_company">Viavi Streaming</string>
    <string name="stripe_token_error">Some error occurred when generating stripe token</string>
    <string name="isRTL">false</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="isPremium">Premium</string>
    <string name="no_item_found">No video is available now for this category</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="loading">Loading</string>
    <string name="watch_now">Watch Now</string>
    <string name="back_key">Please click BACK again to exit</string>
    <string name="filter">Filter</string>
    <string name="filter_newest">NEWEST</string>
    <string name="filter_oldest">OLDEST</string>
    <string name="filter_alpha">A to Z</string>
    <string name="filter_random">RANDOM</string>
    <string name="duration">Duration:</string>
    <string name="language_details">Language:</string>
    <string name="category_details">Category:</string>
    <string name="genre_detail">Genre:</string>
    <string name="related_movie">Related Movies</string>
    <string name="related_sport">Related Sport</string>
    <string name="related_show">Related Shows</string>
    <string name="related_tv">Related TV</string>
    <string name="see_all">SEE ALL</string>
    <string name="no_episode_found">No Episode Found</string>
    <string name="share_msg">Hi,I would like to share Application which is used to play tv and movies free please download it from Google Play Store Free Here \n https://play.google.com/store/apps/details?id=</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Viaan+Parmar</string>
    <string name="view_all">See All</string>
    <string name="invalid_license">Invalid License</string>
    <string name="license_msg">You are using invalid License or Package name is already in use, for more information contact us</string>
    <string name="something_went">Something went wrong please restart application</string>
    <string name="user_disable">Admin was disable or deleted you as user</string>
    <string name="home_recently_watched">Continue Watching</string>
    <string name="home_latest_movie">Trending Movies</string>
    <string name="home_latest_show">Upcoming Movies</string>
    <string name="home_popular_movie">Popular Shows &amp; Series</string>
    <string name="home_popular_show">Blockbusters</string>
    <string name="edit">Edit Profile</string>
    <string name="my_subscription">My Subscription</string>
    <string name="current_plan">Current Plan : %s</string>
    <string name="expire_on">Subscription expires on : %s</string>
    <string name="upgrade_plan">Upgrade Plan</string>
    <string name="last_invoice">Last Invoice</string>
    <string name="last_invoice_date">Date : %s</string>
    <string name="last_invoice_plan">Plan : %s</string>
    <string name="last_invoice_amount">Amount : %s</string>
    <string name="amount">Enter the amount you wish want to Donate</string>
    <string name="n_a">N/A</string>
    <string name="pay_via">Pay : %s %s via %s</string>
    <string name="payment">Payment</string>
    <string name="paypal_payment_error_1">an extremely unlikely failure occurred</string>
    <string name="paypal_payment_error_2">The user canceled.</string>
    <string name="paypal_payment_error_3">An invalid Payment was submitted</string>
    <string name="paypal_payment_error_4">Paypal failure</string>
    <string name="razor_payment_error_1">Razor Pay failure</string>
    <string name="stripe_payment_error_1">Stripe failure</string>
    <string name="try_again">Try Again</string>
    <string name="stream_not_found">Unfortunately stream url does not found please report it</string>
    <string name="download_not_found">Unfortunately download url does not found please report it</string>
    <string name="ad_tag_url">https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&amp;iu=/124319096/external/single_ad_samples&amp;ciu_szs=300x250&amp;impl=s&amp;gdfp_req=1&amp;env=vp&amp;output=vast&amp;unviewed_position_start=1&amp;cust_params=deployment%3Ddevsite%26sample_ct%3Dskippablelinear&amp;correlator=</string>
    <string name="premium">Premium </string>
    <string name="premium_content">Subscribe for Premium Plan to watch Premium Movies.</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="privacy_url">http://apptific.com/PlayStore/Privacy-Policy.html</string>
    <string name="default_notification_channel_id">CinePrime</string>
    <string name="logout_msg">Do you Really want to Logout ?</string>
    <string name="youtube_api_key">AIzaSyAYJwy6nzCFqgr5LtihRI3YuVBb_34aprw</string>
    <string name="login_first">Please Login to Enjoy Endless Streaming !!</string>
    <string name="download">Download</string>
    <string name="invalid_download">Download url does not supported.</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="error_generic">Playback failed</string>
    <string name="facebook_app_id">279881666986878</string>
    <string name="fb_login_protocol_scheme">fb279881666986878</string>
    <string name="signup_with_fb">Register With Facebook</string>
    <string name="select_birthdate">Select Birthdate</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="what_s_include">What\'s Include</string>
    <string name="promo_code">Promo Code</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="donate">Donate</string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="plan_details_was_sent_to_n_your_email">Plan details was sent to\n your email</string>
</resources>