<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLogin"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_10"
                    android:src="@drawable/bg_home_footer" />

                <TextView
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/menu_home"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

            <com.example.view.NonScrollExpandableListView
                android:id="@+id/exp_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ll_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isLogin ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_10"
                    android:clickable="false"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_more_member" />

                <TextView
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/menu_dashboard"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isLogin ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_10"
                    android:src="@drawable/ic_more_transaction" />

                <TextView
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/menu_transaction"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_watchlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isLogin ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_10"
                    android:src="@drawable/watchlist_white" />

                <TextView
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/menu_watchlist"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_10"
                    android:src="@drawable/bg_more_setting" />

                <TextView
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/menu_setting"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isLogin ? View.GONE : View.VISIBLE}">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_10"
                    android:src="@drawable/ic_login" />

                <TextView
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/menu_login"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{isLogin ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_10"
                    android:src="@drawable/ic_more_logout" />

                <TextView
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/menu_logout"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>